--- a/AppPetQR/templates/AppPetQR/List/MostrarMascotas.html
+++ b/AppPetQR/templates/AppPetQR/List/MostrarMascotas.html
@@ -45,6 +45,7 @@
             <td>{{date.fk_usuario.nombre}}</td>
             <td>{{date.fecharegistro}}</td>
             <td><a href="{% url 'PaginaRegistroVacunas' date.pk %}">Agregar Vacuna</a></td>
+            <td><a href="{% url 'PaginaRegistroDesparasitacion' date.pk %}">Agregar Desparasitacion</a></td>
        
 
           </tr>
