--- a/AppPetQR/templates/AppPetQR/List/MostrarVacunasM.html
+++ b/AppPetQR/templates/AppPetQR/List/MostrarVacunasM.html
@@ -4,16 +4,7 @@
 
 
 
-{% block BtnMenu %}
-<p><a href="{% url 'LMostrarUsuario'   %}" class="btn ColorBoton list-group-item-action">Usuarios</a></p>
-<p><a href="{% url 'LMostrarVacunas'   %}" class="btn ColorBoton list-group-item-action">Mascotas</a></p>
-<p><a href="{% url 'LMostrarMascotas'   %}" class="btn ColorBoton list-group-item-action">Vacunas</a></p>
-<p><a href="{% url 'LMostrarDesparasitacion'   %}" class="btn ColorBoton list-group-item-action">Desparacitasiones</a></p>
-<p><a href="{% url 'LMostrarControlesMedicos'   %}" class="btn ColorBoton list-group-item-action">Controles Medicos</a></p>
-<p><a href="{% url 'LMostrarProducto'   %}" class="btn ColorBoton list-group-item-action">Productos</a></p>
 
-
-{% endblock %}
 
 
 
@@ -23,28 +14,25 @@
     <table class="table table-striped" >
         <thead>
           <tr>
-            <th scope="col">Documento</th>
-            <th scope="col">Nombre</th>
-            <th scope="col">Apellido</th>
-            <th scope="col">Fecha Nacimiento</th>
-            
-            <th scope="col"> Contacto</th>
-            <th scope="col"> Mascotas</th>
+            <th scope="col">Vacuna</th>
+            <th scope="col">Fecha Registro</th>
+            <th scope="col">Proxima Vacuna</th>
+            <th scope="col">Ver Detalle</th>
           </tr>
         </thead>
         <tbody>
           <tr>
     
           </tr>
-          {% for date in form %}
+          {% for date in VacunasDate %}
           <tr>
             
-            <td>{{date.documento}}</td>
-            <td>{{date.nombre}}</td>
-            <td>{{date.apellido}}</td>
-            <td>{{date.fechanacimiento}}</td>
-            <td>{{date.celular}}</td>
-            <td><a href="">Registrar Mascota</a></td>
+            <td>{{date.fk_producto.nombre}}</td>
+            <td>{{date.fecharegistro}}</td>
+            <td>{{date.proximavacuna}}</td>
+            <td><a href="">Mas Informacion</a></td>
+            
+
           </tr>
           {% endfor %}
 
