--- a/AppPetQR/templates/Doctor.html
+++ b/AppPetQR/templates/Doctor.html
@@ -47,12 +47,7 @@
                 
         
                 <div class="list-group"  id="CenterBoton">
-                    <p><a href="{% url 'LMostrarUsuario'   %}" class="btn ColorBoton list-group-item-action">Usuarios</a></p>
-                    <p><a href="{% url 'LMostrarVacunas'   %}" class="btn ColorBoton list-group-item-action">Vacunas</a></p>
-                    <p><a href="{% url 'LMostrarMascotas'   %}" class="btn ColorBoton list-group-item-action">Mascotas</a></p>
-                    <p><a href="{% url 'LMostrarDesparasitacion'   %}" class="btn ColorBoton list-group-item-action">Desparacitasiones</a></p>
-                    <p><a href="{% url 'LMostrarControlesMedicos'   %}" class="btn ColorBoton list-group-item-action">Controles Medicos</a></p>
-                    <p><a href="{% url 'LMostrarProducto'   %}" class="btn ColorBoton list-group-item-action">Productos</a></p>
+                    <p><a href="{% url 'LMostrarUsuarioMedico'   %}" class="btn ColorBoton list-group-item-action">Usuarios</a></p>
                         
                 </div>
 
