--- a/AppPetQR/templates/AppPetQR/List/MostrarMascotasM.html
+++ b/AppPetQR/templates/AppPetQR/List/MostrarMascotasM.html
@@ -41,7 +41,7 @@
               <td>{{date.fecharegistro}}</td>
             
               <td><a href="{% url 'LMostrarVacunasMedico' date.id %}">Ver Vacunas</a></td>
-              <td><a href="">Ver Desparacitasiones</a></td>
+              <td><a href="{% url 'LMostrarDesparasitacionMedico' date.id %}">Ver Desparacitasiones</a></td>
               <td><a href="">Ver Controles Medicos</a></td>
               
 
