--- a/AppPetQR/templates/AppPetQR/IndexUsuario.html
+++ b/AppPetQR/templates/AppPetQR/IndexUsuario.html
@@ -1,6 +1,7 @@
+
 <script language="Javascript">
   function redireccionars() {
-  setTimeout("location.href='{% url 'LVacunas' %}'", 0000);}      
+  setTimeout("location.href='{% url 'LMascotasMov' %}'", 0000);}      
 </script>
 
 
