--- a/AppPetQR/templates/IndexUsuario.html
+++ b/AppPetQR/templates/IndexUsuario.html
@@ -1,1 +1,9 @@
-{% extends 'Movil.html '%}
+
+<script language="Javascript">
+    function redireccionars() {
+    setTimeout("location.href='{% url 'LMascotasMov' %}'", 0000);}      
+  </script>
+  
+  
+  <body onload="redireccionars()">
+  </body>
