--- a/AppPetQR/templates/AppPetQR/Movil/List/ListarVacunas.html
+++ b/AppPetQR/templates/AppPetQR/Movil/List/ListarVacunas.html
@@ -4,7 +4,7 @@
 
 
 {% block contenido %}
-
+<p style="margin-top:2em;"></p>
 <table>
     <tr>
         <td>Nombre:</td>
@@ -22,6 +22,8 @@
 
 </table>
 
+<img src="{{MostMas.foto.url}}", style="height: 120px; width: 120px; margin-left: 80%; position:absolute; top: 85px;">
+<p style="margin-top:3em;"></p>
 <table class="table" >
     <tr>
         <th>Nombre</th>
