--- a/AppPetQR/templates/AppPetQR/Movil/List/ListarDesparacitacion.html
+++ b/AppPetQR/templates/AppPetQR/Movil/List/ListarDesparacitacion.html
@@ -3,7 +3,7 @@
 
 {% block contenido %}
 
-
+<p style="margin-top:2em;"></p>
 <table>
     <tr>
         <td>Nombre:</td>
@@ -20,6 +20,8 @@
     </tr>
 
 </table>
+<img src="{{MostMas.foto.url}}", style="height: 120px; width: 120px; margin-left: 80%; position:absolute; top: 85px;">
+<p style="margin-top:3em;"></p>
 
     <table  class="table" >
         <tr>
